# fastapi-vue3-template

./: .gitignore  README.md  index.ts  nginx.conf
.github/: README.md
.github/workflows/: backend-ci.yml  dependency-updates.yml  frontend-ci.yml
backend/: Dockerfile  MANAGE_README.md  alembic.ini  manage.py  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ca349fa0a47_add_user_profile.py  96fd37db807b_add_llm_response.py
backend/app/: main.py
backend/app/api/: __init__.py  user.py
backend/app/core/: config.py  db.py  deps.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: schemas.py
backend/app/services/: user_service.py
backend/app/tests/: test_supabase_utils.py
backend/app/utils/: supabase_utils.py
frontend/: Dockerfile  eslint.config.cjs  lighthouserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  tailwind.config.js  temp  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  setupTests.ts
frontend/src/api/: index.ts  user.ts
frontend/src/components/: Presence.vue
frontend/src/mock/: browser.ts  handlers.ts  node.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/styles/: index.css  theme.css
frontend/src/utils/: llm.ts  request.ts  supabase.ts  usePresence.ts
frontend/src/views/: Auth.vue  AuthCallback.vue  Chat.vue  ChatRoom.vue  Home.vue  Summary.vue  Test.vue
supabase/: config.toml  deploy.sh
supabase/functions/llm/: deno.json  index.ts
supabase/functions/stream-llm/: deno.json  (+1 more)
